--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "my first blog",
   "main": "index.js",
   "scripts": {
-    "start": "supervisor -- -r 'babel-register' index.js",
+    "build": "webpack",
+    "start": "cross-env NODE_ENV=development supervisor -- -r babel-register index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -26,9 +27,12 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "babel-register": "^6.24.1",
+    "css-loader": "^0.28.4",
     "eslint": "^3.19.0",
     "eslint-config-airbnb": "^15.0.1",
     "eslint-config-standard": "^10.2.1",
@@ -37,6 +41,9 @@
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
-    "eslint-plugin-standard": "^3.0.1"
+    "eslint-plugin-standard": "^3.0.1",
+    "file-loader": "^0.11.2",
+    "style-loader": "^0.18.2",
+    "webpack": "^3.0.0"
   }
 }
