--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^0.11.2",
     "style-loader": "^0.18.2",
-    "webpack": "^3.0.0"
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.5.0"
   }
 }
