--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "start": "cross-env NODE_ENV=development supervisor -- -r babel-register index.js",
+    "start": "supervisor -- -r babel-register index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
