--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "build": "webpack",
     "start": "supervisor -- -r babel-register index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "babel-node ./node_modules/istanbul/lib/cli.js cover ./node_modules/mocha/bin/_mocha"
   },
-  "author": "",
+  "author": "raoqiang",
   "license": "ISC",
   "dependencies": {
     "config-lite": "^2.0.0",
@@ -27,6 +27,7 @@
     "winston": "^2.3.1"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
     "babel-preset-es2015": "^6.24.1",
@@ -43,7 +44,10 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^0.11.2",
+    "istanbul": "^0.4.5",
+    "mocha": "^3.1.2",
     "style-loader": "^0.18.2",
+    "supertest": "^3.0.0",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.5.0"
   }
